[tool.poetry]
name = "propertyapp"
version = "0.0.1"
description = "This is base functionality to start with"
authors = ["raovarun91 <30377012+raovarun91@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
sqlalchemy = "^1.4.43"
uvicorn = "^0.19.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
